# adk-agent-vertex-simple

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  keycommands.md  project_setup.md  pyproject.toml  requirements.txt  schemas.py
fastapi_backend/: __init__.py  auth.py  cloud_run_agent.py  hello.py  main.py  request_utils.py  response_utils.py  user_service.py
fastapi_backend/static/: history.html  index.html
fastapi_backend/templates/: __init__.py  login_direct.html  logout.html
refiner_agent/: .env.example  adk.yaml  agent.py  callbacks.py  config.py  flow_control.py  orchestrator.py  timing.py  tools.py
refiner_agent/docs/: IntroductiontoConversationalContext.md  callbacks.md  context.md  events.md  memory.md  reference.md  session.md  state.md
refiner_agent/subagents/critique/: agent.py
refiner_agent/subagents/generator/: agent.py
refiner_agent/subagents/refiner/: agent.py
shared_utils/: __init__.py  error_utils.py
